--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #191414;
+  background-image: radial-gradient(rgb(207, 207, 207) 1px, transparent 1px);
+  background-size: 10px 10px;
+  color: white;
 }
 
 code {
@@ -12,40 +16,22 @@ code {
     monospace;
 }
 
-body {
-  background-color: #191414;
-  background-image: radial-gradient(rgb(207, 207, 207) 1px, transparent 1px);
-  background-size: 10px 10px;
-  color: white;
-}
-
-/* Container for the whole page */
 .container {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   gap: 32px;
-  padding: 0 160px;
-  box-sizing: border-box;
-  width: 100%;
-}
-
-/* Example styles for grid items */
-.grid-item {
-  background-color: #1DB954;
-  padding: 20px;
-  text-align: center;
+  padding: 0 80px;
+  /* Adjust based on your design */
 }
 
 /* Container for the header */
 .header {
-  grid-column: span 12;
-  background-color: #1DB954;
   padding: 20px;
   text-align: center;
   backdrop-filter: blur(2px) saturate(100%);
-    -webkit-backdrop-filter: blur(2px) saturate(100%);
-    background-color: rgba(29, 185, 84, 0.6);
-    border: 1px solid rgba(255, 255, 255, 0.125);
+  -webkit-backdrop-filter: blur(2px) saturate(100%);
+  background-color: rgba(29, 185, 84, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
 /* Style for the heading */
@@ -61,9 +47,11 @@ body {
 }
 
 .profile {
-  margin: 20px auto;
+  grid-column: 4 / 10;
   display: flex;
+  align-items: center;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .profile-info {
@@ -72,9 +60,9 @@ body {
   border-radius: 12px;
   padding: 10px;
   backdrop-filter: blur(2px) saturate(100%);
-    -webkit-backdrop-filter: blur(2px) saturate(100%);
-    background-color: rgba(29, 185, 84, 0.6);
-    border: 1px solid rgba(255, 255, 255, 0.125);
+  -webkit-backdrop-filter: blur(2px) saturate(100%);
+  background-color: rgba(29, 185, 84, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
 .profile-picture {
@@ -98,17 +86,107 @@ body {
 button {
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #1DB954;
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   backdrop-filter: blur(2px) saturate(100%);
-    -webkit-backdrop-filter: blur(2px) saturate(100%);
-    background-color: rgba(29, 185, 84, 0.6);
-    border: 1px solid rgba(255, 255, 255, 0.125);
+  -webkit-backdrop-filter: blur(2px) saturate(100%);
+  background-color: rgba(29, 185, 84, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
 button:hover {
   background-color: #1aa34a;
+}
+
+/* Search form styling */
+.search-form {
+  grid-column: 5 / span 4;
+  /* Starts at the end of the 4th column and spans 5 columns */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0;
+}
+
+
+
+/* Search input styling */
+.search-input {
+  width: 100%;
+  height: 50px;
+  padding: 10px;
+  border-radius: 12px;
+  color: white;
+  font-size: 1rem;
+  box-sizing: border-box;
+  backdrop-filter: blur(2px) saturate(100%);
+  -webkit-backdrop-filter: blur(2px) saturate(100%);
+  background-color: rgba(29, 185, 84, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.125);
+}
+
+.search-input::placeholder {
+  color: #CACACA;
+}
+
+.results {
+  grid-column: span 7;
+  /* Spans from the start to the 7th column */
+  border-radius: 12px;
+  padding: 10px 16px;
+  box-sizing: border-box;
+  backdrop-filter: blur(2px) saturate(100%);
+  -webkit-backdrop-filter: blur(2px) saturate(100%);
+  background-color: rgba(29, 185, 84, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.125);
+}
+
+.results h2 {
+  margin-top: 0;
+}
+
+.playlist {
+  grid-column: 8 / span 4;
+  border-radius: 12px;
+  padding: 10px 16px;
+  box-sizing: border-box;
+  backdrop-filter: blur(2px) saturate(100%);
+  -webkit-backdrop-filter: blur(2px) saturate(100%);
+  background-color: rgba(29, 185, 84, 0.6);
+  border: 1px solid rgba(255, 255, 255, 0.125);
+}
+
+.playlist button {
+  margin: 10px;
+}
+
+.playlist-name {
+  display: inline-block; /* Ensures the input width adjusts based on content */
+  position: relative;
+  margin-bottom: 10px; /* Adjust as needed */
+}
+
+.playlist-name input[type="text"] {
+  border: none;
+  border-bottom: 1px solid #ccc; /* Underline style */
+  background-color: transparent; /* Ensures no background color */
+  padding: 5px; /* Adjust padding as needed */
+  color: white; /* Text color */
+  width: 100%; /* Ensures input expands to fill the available width */
+  font-size: 1em; /* Adjust font size as needed */
+  outline: none; /* Removes default focus outline */
+}
+
+.playlist-name input[type="text"]:focus {
+  border-color: #1DB954; /* Change underline color on focus if needed */
+}
+
+.action_button {
+  padding: 5px 10px;
+}
+
+.track {
+  
 }
