--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,8 @@ button:hover {
 }
 
 .playlist-name {
-  display: inline-block; /* Ensures the input width adjusts based on content */
+  display: inline-block;
+  /* Ensures the input width adjusts based on content */
   position: relative;
   margin-bottom: 10px;
   margin-top: 0;
@@ -172,21 +173,30 @@ button:hover {
 
 .playlist-name input[type="text"] {
   border: none;
-  border-bottom: 1px solid #ccc; /* Underline style */
-  background-color: transparent; /* Ensures no background color */
-  padding: 5px; /* Adjust padding as needed */
-  color: white; /* Text color */
-  width: 100%; /* Ensures input expands to fill the available width */
-  font-size: 1em; /* Adjust font size as needed */
-  outline: none; /* Removes default focus outline */
+  border-bottom: 1px solid #ccc;
+  /* Underline style */
+  background-color: transparent;
+  /* Ensures no background color */
+  padding: 5px;
+  /* Adjust padding as needed */
+  color: white;
+  /* Text color */
+  width: 100%;
+  /* Ensures input expands to fill the available width */
+  font-size: 1em;
+  /* Adjust font size as needed */
+  outline: none;
+  /* Removes default focus outline */
 }
 
 .playlist-name input[type="text"]:focus {
-  border-color: #1DB954; /* Change underline color on focus if needed */
+  border-color: #1DB954;
+  /* Change underline color on focus if needed */
 }
 
 .input-playlist-name {
-  font-weight: 600; /* Semi-bold font weight */
+  font-weight: 600;
+  /* Semi-bold font weight */
 }
 
 
@@ -196,14 +206,18 @@ button:hover {
 
 .track-item {
   display: flex;
-  justify-content: space-between; /* Align items with space between */
-  align-items: center; /* Center items vertically */
+  justify-content: space-between;
+  /* Align items with space between */
+  align-items: center;
+  /* Center items vertically */
   padding: 10px 10px 10px 0px;
-  border-bottom: 1px solid white; /* Bottom border for each track item */
+  border-bottom: 1px solid white;
+  /* Bottom border for each track item */
 }
 
 .track-info {
-  flex: 1; /* Take up remaining space */
+  flex: 1;
+  /* Take up remaining space */
 }
 
 .track-info h3 {
@@ -212,7 +226,8 @@ button:hover {
 
 .track-info p {
   margin: 5px 0;
-  color: #ccc; /* Adjust color if needed */
+  color: #ccc;
+  /* Adjust color if needed */
   font-weight: 600;
 }
 
@@ -232,10 +247,51 @@ button:hover {
 }
 
 .action_button:hover {
-  background-color: #1aa34a; /* Adjust hover color if needed */
+  background-color: #1aa34a;
+  /* Adjust hover color if needed */
 }
 
 .results_p {
   font-size: 1.5rem;
   font-weight: 600;
+}
+
+@media only screen and (max-width: 913px) {
+  .profile-text h2 {
+    font-size: 1.25rem;
+  }
+
+  .search-form {
+    grid-column: 4 / span 6;
+  }
+}
+
+@media only screen and (max-width: 860px) {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 16px;
+    padding: 0 16px;
+    /* Adjust based on your design */
+  }
+
+  .search-form {
+    grid-column: span 12;
+  }
+
+  .profile {
+    grid-column: span 12;
+  }
+
+  .results {
+    grid-column: span 12;
+    /* Span all 12 columns */
+  }
+
+  .playlist {
+    grid-column: span 12;
+    /* Span all 12 columns */
+    display: flex;
+    justify-content: center;
+  }
 }
